--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@ font-style: italic;
     margin-bottom: 25px;
   }
   header img.flag {
-    width: 200px;
+    width: 100px;
     margin: 0 10px;
     vertical-align: top;
   }
   header h1 {
     display: inline-block;
-    margin: 0 40px 0 40px;
+    margin: 0 20px 0 20px;
     vertical-align: middle;
   }
   .intro {
     max-width: 700px;
     margin: 0 auto 30px;
-    font-size: 1.1em;
+    font-size: 1em;
     line-height: 1.5em;
     text-align: center;
   }
@@ -46,7 +46,7 @@ font-style: italic;
   padding: 20px 25px;
   border: 1px solid #ccc;
   border-radius: 12px;
-  background: black;
+  background: grey;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
   transition: box-shadow 0.3s ease;
 }
@@ -56,7 +56,7 @@ fieldset:hover {
 }
   legend {
     font-weight: bold;
-    padding: 0 10px;
+    padding: 0 30px;
   }
   label {
     display: block;
@@ -68,7 +68,7 @@ fieldset:hover {
   input[type="tel"],
   input[type="date"],
   select {
-    width: 100%;
+    width: 100;
     padding: 7px 10px;
     margin-bottom: 15px;
     border-radius: 4px;
@@ -86,8 +86,8 @@ fieldset:hover {
     justify-content: center;
   }
 .finger-btn {
-  width: 70px;
-  height: 140px;
+  width: 80px;
+  height: 100px;
   background: #f2c29c;
   border: 2px solid #b87b4f;
   border-radius: 50% / 30%;
@@ -106,10 +106,10 @@ fieldset:hover {
   border-color: #28a745; /* success green */
   background: linear-gradient(to bottom, #b6f5c9, #7be495);
   box-shadow:
-    0 0 25px 10px rgba(40, 167, 69, 0.5),   /* outer green glow */
+    0 0 25px 15px rgba(40, 167, 69, 0.5),   /* outer green glow */
     0 8px 15px rgba(0, 0, 0, 0.2),           /* subtle depth */
     inset 0 0 10px rgba(0, 0, 0, 0.1);       /* finger groove */
-  transition: background 0.4s, box-shadow 0.4s;
+  transition: background 0.3s, box-shadow 0.3s;
 }
 
 /* Realistic fingerprint pattern using SVG as background */
@@ -185,9 +185,9 @@ fieldset:hover {
   }
   .eyeScanBtn {
   width: 100px;
-  height: 60px;
+  height: 90px;
   background: #ffffff;
-  border: 2px solid #000;
+  border: 2px solid black;
   border-radius: 50% / 50%;
   position: relative;
   cursor: pointer;
@@ -274,8 +274,8 @@ fieldset:hover {
 
 /* Stylish ID card preview */
 .id-pic-preview {
-  width: 240px;
-  height: 160px;
+  width: 100px;
+  height: 120px;
   background: #fff;
   border: 2px solid #4caf50; /* Modern lime/green */
   border-radius: 12px;
