--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ font-style: italic;
     margin-bottom: 25px;
   }
   header img.flag {
-    width: 100px;
+    width: 150px;
     margin: 0 10px;
     vertical-align: top;
   }
@@ -46,7 +46,7 @@ font-style: italic;
   padding: 20px 25px;
   border: 1px solid #ccc;
   border-radius: 12px;
-  background: grey;
+  background: black;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
   transition: box-shadow 0.3s ease;
 }
@@ -86,8 +86,8 @@ fieldset:hover {
     justify-content: center;
   }
 .finger-btn {
-  width: 80px;
-  height: 100px;
+  width: 100px;
+  height: 120px;
   background: #f2c29c;
   border: 2px solid #b87b4f;
   border-radius: 50% / 30%;
@@ -184,7 +184,7 @@ fieldset:hover {
     margin: 10px 0 15px 0;
   }
   .eyeScanBtn {
-  width: 100px;
+  width: 120px;
   height: 90px;
   background: #ffffff;
   border: 2px solid black;
@@ -263,7 +263,7 @@ fieldset:hover {
   .id-pic-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 32px;
+  gap: 10px;
   justify-content: center;
   padding: 2rem;
   background: #f0f4f8;
@@ -328,18 +328,29 @@ fieldset:hover {
 
 <header>
   <img src="https://flagcdn.com/w80/et.png" alt="Ethiopia Flag" class="flag" />
-  <h1>Ethio Canada Consultant</h1>
+  <h1>MESRAK GENERAL TRADING PLC 
+  
+  📲 0900038209</h1>
+  
   <img src="https://flagcdn.com/w80/ca.png" alt="Canada Flag" class="flag" />
 </header>
 
 <div class="intro">
  <p>
-   Welcome to ETHIO Canada Travel Consultant – Bridging Dreams Across Continents
-🇨🇦🇪🇹🇨🇦🇪🇹
+ 🇪🇹🇨🇦🇪🇹🇨🇦 🌐 ወደ MESRAK GENERAL TRADING PLC እንኳን በደህና መጡ    0900038209🌐 🇨🇦🇪🇹🇨🇦🇪🇹
   </p>
-  <p>At ETHIO Canada Travel Consultant, we specialize in turning your travel aspirations into reality. Whether you're planning to explore the natural beauty of Canada, reconnect with your Ethiopian roots, or pursue immigration, education, or business opportunities, we're here to guide you every step of the way.</p>
-  <p>With trusted expertise in visa consultation, travel planning, and cross-border services, we offer personalized support tailored to your unique journey. Our commitment is to ensure a smooth, stress-free experience — because your future deserves expert care.
-</p><p>🇨🇦🇪🇹🇨🇦🇪🇹🇨🇦🇪🇹</p>
+  <p>✅በ MESRAK GENERAL TRADING PLC የጉዞ ምኞቶቻችሁን ወደ እውነት ለመቀየር ተዘጋጅተናል። የካናዳን የተፈጥሮ ውበት ለመዳሰስ፣ የስራ እድል ለማግኘት ፣ ወይም ኢሚግሬሽንን፣ ትምህርትን ወይም የንግድ እድሎችን ለመከታተል እያሰብክ ከሆነ፣ እያንዳንዱን እርምጃ አብረናችሁ ለመራመድ መጥተናል።</p>
+  <p>✅ቪዛ ማማከር እና ማስፈፀም፣ ፓስፖርት ማስጨረስ፣የጉዞ እቅድ እና ድንበር ተሻጋሪ አገልግሎቶች ላይ ከበቂ እውቀት ጋር፣ ለልዩ ጉዞዎች የተዘጋጀ ግላዊ ድጋፍ እናቀርባለን።
+</p>
+<p>የሙያ ዘርፎች፦</p>
+<p>1.Driver - በሹፍርና</p>
+<p>2.Cleaner - የፅዳት ባለሙያ</p>
+<p>3.Chef - በምግብ ማብሰል</p>
+<p>4.Labourer - በጉልበት ሰራተኝነት</p>
+<p>5.Security gard -የጥበቃ ባሙያ</p>
+<p>6.Technician - ቴክኒሺያን</p>
+<p>7.Store keeper - ሱቅ ጠባ</p>
+<p>.........በነዚህ እና በሌሎች ብዛት ባላቸው የስራ ዘርፎች ላይ የዉጭ ሀገር የስራ ዕድሎችን አመቻችቷል ።</p><p>🇨🇦🇪🇹🇨🇦📲 0900038209🇪🇹🇨🇦🇪🇹</p>
 </div>
 
 <form id="registrationForm">
@@ -347,32 +358,37 @@ fieldset:hover {
   <fieldset>
     <legend>Personal Information</legend>
 
-    <label for="fullName">Full Name</label>
-    <input id="fullName" name="fullName" type="text" required />
-
-    <label for="address">Address</label>
+    <label for="Name">Name (የእርስዎ ሰም)</label>
+    <input id="Name" name="Name" type="text" required />
+<label for="fatherName">Father Name (የአባት ስም)</label>
+    <input id="fatherName" name="fatherName" type="text" required />
+    <label for="grandFatherName">Grand Father Name (የአያት ስም)</label>
+    <input id="grandFatherName" name="grandFatherName" type="text" required />
+    <label for="HolderName">Holder Name (የተያዥ ስም)</label>
+    <input id="HolderName" Holder Name="HolderName" type="text" required />
+    <label for="address">Address(አድራሻ)</label>
     <input id="address" name="address" type="text" required />
 
-    <label for="phone">Phone Number</label>
+    <label for="phone">Phone Number(ስልክ ቁጥር)</label>
     <input id="phone" name="phone" type="tel" required />
 
-    <label for="email">Email</label>
+    <label for="email">Email(ኢሜል)</label>
     <input id="email" name="email" type="email" required />
 
-    <label for="dob">Date of Birth</label>
+    <label for="dob">Date of Birth(የልደት ቀን)</label>
     <input id="dob" name="dob" type="date" required />
 
-    <label for="age">Age</label>
+    <label for="age">Age(እድሜ)</label>
     <input id="age" name="age" type="text" readonly />
   </fieldset>
 
   <fieldset>
-    <legend>Fingerprint Scan</legend>
+    <legend>Fingerprint Scan(የእጅ አሻራ)</legend>
 
-    <p>Click each finger to scan.</p>
+    <p>እያንዳንዱን ጣትዎን ከአዉራ ጣት ጀምሮ በቅደም ተከተል ያስገቡ።</p>
 
     <div>
-      <strong>Left Hand</strong>
+      <strong>Left Hand (ግራ እጅ)</strong>
     </div>
     <div class="finger-group">
       <button type="button" class="finger-btn" data-hand="left" data-finger="thumb" title="Left Thumb"></button>
@@ -383,7 +399,7 @@ fieldset:hover {
     </div>
 
     <div>
-      <strong>Right Hand</strong>
+      <strong>Right Hand(ቀኝ እጅ)</strong>
     </div>
     <div class="finger-group">
       <button type="button" class="finger-btn" data-hand="right" data-finger="thumb" title="Right Thumb"></button>
@@ -396,7 +412,7 @@ fieldset:hover {
   </fieldset>
 
   <fieldset>
-    <legend>Eye Scan</legend>
+    <legend>Eye Scan(የአይን አሻራ)</legend>
     <p>Click any eye to scan both eyes simultaneously.</p>
     <div class="eye-scan-group">
       <div>
@@ -409,9 +425,9 @@ fieldset:hover {
 
   <fieldset>
     <legend>ID Card Upload</legend>
-    <label for="idFront">Upload ID Front</label>
+    <label for="idFront">Upload ID Front(የፊት ገፅ)</label>
     <input type="file" id="idFront" accept="image/*" required />
-    <label for="idBack">Upload ID Back</label>
+    <label for="idBack">Upload ID Back(የኋላ ገፅ)</label>
     <input type="file" id="idBack" accept="image/*" required />
     <div class="id-pic-container">
       <img id="idFrontPreview" class="id-pic-preview" alt="ID Front Preview" />
