--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ fieldset:hover {
 
 <div class="intro">
  <p>
- 🇪🇹🇨🇦🇪🇹🇨🇦 🌐 ወደ MESRAK GENERAL TRADING PLC እንኳን በደህና መጡ    0900038209🌐 🇨🇦🇪🇹🇨🇦🇪🇹
+ 🇪🇹🇨🇦🇪🇹🇨🇦 🌐 ወደ MESRAK GENERAL TRADING PLC እንኳን በደህና መጡ   ያለን ብቸኛ ስልክ ቁጥር 0900038209🌐 🇨🇦🇪🇹🇨🇦🇪🇹
   </p>
   <p>✅በ MESRAK GENERAL TRADING PLC የጉዞ ምኞቶቻችሁን ወደ እውነት ለመቀየር ተዘጋጅተናል። የካናዳን የተፈጥሮ ውበት ለመዳሰስ፣ የስራ እድል ለማግኘት ፣ ወይም ኢሚግሬሽንን፣ ትምህርትን ወይም የንግድ እድሎችን ለመከታተል እያሰብክ ከሆነ፣ እያንዳንዱን እርምጃ አብረናችሁ ለመራመድ መጥተናል።</p>
   <p>✅ቪዛ ማማከር እና ማስፈፀም፣ ፓስፖርት ማስጨረስ፣የጉዞ እቅድ እና ድንበር ተሻጋሪ አገልግሎቶች ላይ ከበቂ እውቀት ጋር፣ ለልዩ ጉዞዎች የተዘጋጀ ግላዊ ድጋፍ እናቀርባለን።
