--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ fieldset:hover {
 
 <!-- Congratulations Message Container -->
 <div id="congratsMessage">
-  🎉🎉🎉Thank you for registering with🎉🎉🎉 <strong>🇪🇹🇨🇦Ethio Canada Consultant🇨🇦🇪🇹</strong>! We have received your submission successfully🧾🧾🧾.
+  🎉🎉🎉Thank you for registering with🎉🎉🎉 <strong>🇪🇹🇨🇦MESRAK GENERAL TRADING PLC🇨🇦🇪🇹</strong>! We have received your submission successfully🧾🧾🧾.
 </div>
 
 <audio id="scanSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
