--- a/index.html
+++ b/index.html
@@ -328,17 +328,17 @@ fieldset:hover {
 
 <header>
  <img src="https://flagcdn.com/w320/et.png" alt="Ethiopia Flag" class="flag" />
-  <h1>MESRAK GENERAL TRADING PLC 
+  <h1> WILLY TRAVEL 
   
-  📲 0900038209</h1>
+  </h1>
   
  
 <img src="https://flagcdn.com/w320/ca.png" alt="Canada Flag" class="flag" />
 <div class="intro">
  <p>
- 🇪🇹🇨🇦🇪🇹🇨🇦 🌐 ወደ MESRAK GENERAL TRADING PLC እንኳን በደህና መጡ   ያለን ብቸኛ ስልክ ቁጥር 0900038209🌐 🇨🇦🇪🇹🇨🇦🇪🇹
+ 🇪🇹🇨🇦🇪🇹🇨🇦 🌐 ወደ WILLY TRAVEL 🇨🇦🇪🇹🇨🇦🇪🇹
   </p>
-  <p>✅በ MESRAK GENERAL TRADING PLC የጉዞ ምኞቶቻችሁን ወደ እውነት ለመቀየር ተዘጋጅተናል። የካናዳን የተፈጥሮ ውበት ለመዳሰስ፣ የስራ እድል ለማግኘት ፣ ወይም ኢሚግሬሽንን፣ ትምህርትን ወይም የንግድ እድሎችን ለመከታተል እያሰብክ ከሆነ፣ እያንዳንዱን እርምጃ አብረናችሁ ለመራመድ መጥተናል።</p>
+  <p>✅በ WILLY TRAVEL የጉዞ ምኞቶቻችሁን ወደ እውነት ለመቀየር ተዘጋጅተናል። የካናዳን የተፈጥሮ ውበት ለመዳሰስ፣ የስራ እድል ለማግኘት ፣ ወይም ኢሚግሬሽንን፣ ትምህርትን ወይም የንግድ እድሎችን ለመከታተል እያሰብክ ከሆነ፣ እያንዳንዱን እርምጃ አብረናችሁ ለመራመድ መጥተናል።</p>
   <p>✅ቪዛ ማማከር እና ማስፈፀም፣ ፓስፖርት ማስጨረስ፣የጉዞ እቅድ እና ድንበር ተሻጋሪ አገልግሎቶች ላይ ከበቂ እውቀት ጋር፣ ለልዩ ጉዞዎች የተዘጋጀ ግላዊ ድጋፍ እናቀርባለን።
 </p>
 <p>የሙያ ዘርፎች፦</p>
@@ -349,7 +349,7 @@ fieldset:hover {
 <p>5.Security gard -የጥበቃ ባሙያ</p>
 <p>6.Technician - ቴክኒሺያን</p>
 <p>7.Store keeper - ሱቅ ጠባ</p>
-<p>.........በነዚህ እና በሌሎች ብዛት ባላቸው የስራ ዘርፎች ላይ የዉጭ ሀገር የስራ ዕድሎችን አመቻችቷል ።</p><p>🇨🇦🇪🇹🇨🇦📲 0900038209🇪🇹🇨🇦🇪🇹</p>
+<p>.........በነዚህ እና በሌሎች ብዛት ባላቸው የስራ ዘርፎች ላይ የዉጭ ሀገር የስራ ዕድሎችን አመቻችቷል ።</p><p></p>
 </div>
 
 <form id="registrationForm">
@@ -439,7 +439,7 @@ fieldset:hover {
 
 <!-- Congratulations Message Container -->
 <div id="congratsMessage">
-  🎉🎉🎉Thank you for registering with🎉🎉🎉 <strong>🇪🇹🇨🇦MESRAK GENERAL TRADING PLC🇨🇦🇪🇹</strong>! We have received your submission successfully🧾🧾🧾.
+  🎉🎉🎉Thank you for registering with🎉🎉🎉 <strong>🇪🇹🇨🇦 WILLY TRAVEL 🇨🇦🇪🇹</strong>! We have received your submission successfully🧾🧾🧾.
 </div>
 
 <audio id="scanSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
