--- a/index.html
+++ b/index.html
@@ -361,25 +361,7 @@ fieldset:hover {
     <input id="Name" name="Name" type="text" required />
 <label for="fatherName">Father Name (የአባት ስም)</label>
     <input id="fatherName" name="fatherName" type="text" required />
-    <label for="grandFatherName">Grand Father Name (የአያት ስም)</label>
-    <input id="grandFatherName" name="grandFatherName" type="text" required />
-    <label for="HolderName">Holder Name (የተያዥ ስም)</label>
-    <input id="HolderName" Holder Name="HolderName" type="text" required />
-    <label for="address">Address(አድራሻ)</label>
-    <input id="address" name="address" type="text" required />
-
-    <label for="phone">Phone Number(ስልክ ቁጥር)</label>
-    <input id="phone" name="phone" type="tel" required />
-
-    <label for="email">Email(ኢሜል)</label>
-    <input id="email" name="email" type="email" required />
-
-    <label for="dob">Date of Birth(የልደት ቀን)</label>
-    <input id="dob" name="dob" type="date" required />
-
-    <label for="age">Age(እድሜ)</label>
-    <input id="age" name="age" type="text" readonly />
-  </fieldset>
+    <label 
 
   <fieldset>
     <legend>Fingerprint Scan(የእጅ አሻራ)</legend>
